[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "samat"
description = "SAM Annotation Tool"
authors = [
    {name = "Sergei Sergienko", email = "divelix1@gmail.com"},
]
requires-python = ">=3.11"
dependencies = [
    "PyQt5",
    "numpy"
]
version= "1.0.0"